--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "react-countup/countup.js": "2.5.0"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "mongodb": "^6.1.0",
