--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "reacticons": "^0.0.1",
-    "roboto": "^0.2.1"
+    "roboto": "^0.2.1",
     "sort-by": "^1.2.0"
   }
 }
