--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^4.11.0",
     "reacticons": "^0.0.1",
     "roboto": "^0.2.1",
