--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "react": "^18",
