--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^4.11.0",
+    "react-select": "^5.8.0",
     "reacticons": "^0.0.1",
     "roboto": "^0.2.1",
     "sort-by": "^1.2.0",
