--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.1.0",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^4.11.0",
     "react-select": "^5.8.0",
