--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^4.11.0",
     "react-select": "^5.8.0",
     "reacticons": "^0.0.1",
     "roboto": "^0.2.1",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0"
   }
